[package]
name = "eup_resizer"
version = "1.0.0"
edition = "2024"
description = "Batch texture resizer/squisher for FiveM EUP .ytd resources"
license-file = "LICENSE.md"
publish = false

[[bin]]
name = "eup_resizer"
path = "src/main.rs"

[dependencies]
rpf-archive = "0.7"
texture2ddecoder = "0.1"
intel_tex_2 = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
eframe = "0.35"
egui = "0.35"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
flate2 = "1"
texpresso = "2.0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level = 3
debug = 0
lto = true
codegen-units = 1
